wiki-resources/manifests-tmpl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: DEPLOYMENT NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: APP NAME
      part-of: ferris-apps
  template:
    metadata:
      labels:
        app: APP NAME
        part-of: ferris-apps
    spec:
      containers:
      - name: CONTAINER NAME
        image: IMAGE
        imagePullPolicy: "Always"
        # Map all env variables from specified configmap 
        securityContext:
          runAsUser: 10000
        ports:
          - containerPort: PORT INSIDE CONTAINER
